test/fail/functionwrongargs.app
//No function

application test

section datamodel


  function getA(i : Int) : String {
    return "a";
  }
  
  function useA() {
    getA("Fiets");
  }

